Systems 1st Draft
Placed system backgrounds and set up a grid. Grid needs some fixing.
AJ is there anything I abvoussly did wrong?

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -29,6 +29,7 @@ input[type="radio"] {
 	font: inherit;
 	vertical-align: baseline;
 }
+
 	/* Multiple Sheet Functionality */
 	div.sheet-sheetType {
 		display: none;
@@ -348,7 +349,6 @@ div.sheet-row2250 {
 	position: absolute;
 	top: 2250px;
 }
-
 
 div.sheet-row2300 {
 	position: absolute;
@@ -845,12 +845,12 @@ input[type="checkbox"]:checked.sheet-patch + span::before {
 /* Fake radio as D10s*/
 input[type="radio"].sheet-D10 + span::before {
 	margin-right: 6px;
-	line-height: 14px;
+	line-height: 12px;
 	text-align: center;
 	vertical-align: middle;
-	width: 12px;
-	height: 12px;
-	font-size: 24px;
+	width: 10px;
+	height: 10px;
+	font-size: 16px;
 	font-family: "dicefontd10";
 	content: "J";
 }
@@ -858,12 +858,12 @@ input[type="radio"].sheet-D10 + span::before {
 /* Remove fill from all radios _after_ selected D10 */
 input[type="radio"]:checked.sheet-D10 ~ input[type="radio"].sheet-D10 + span::before {
 	margin-right: 6px;
-	line-height: 14px;
+	line-height: 12px;
 	text-align: center;
 	vertical-align: middle;
-	width: 12px;
-	height: 12px;
-	font-size: 24px;
+	width: 10px;
+	height: 10px;
+	font-size: 16px;
 	font-family: "dicefontd10";
 	content: "0";
 }
@@ -900,13 +900,13 @@ input[type="checkbox"]:checked.sheet-Overcharge + span::before {
 /* Fake radio as Uparrows*/
 input[type="radio"].sheet-Boost + span::before {
 	margin-right: 4px;
-	line-height: 14px;
+	line-height: 12px;
 	text-align: center;
 	vertical-align: middle;
 	letter-spacing: 0.12em;
-	width: 12px;
-	height: 12px;
-	font-size: 24px;
+	width: 10px;
+	height: 10px;
+	font-size: 16px;
 	font-family: "dicefontd4";
 	content: "A";
 }
@@ -914,13 +914,13 @@ input[type="radio"].sheet-Boost + span::before {
 /* Remove fill from all radios _after_ selected Uparrows */
 input[type="radio"]:checked.sheet-Boost ~ input[type="radio"].sheet-Boost + span::before {
 	margin-right: 4px;
-	line-height: 14px;
+	line-height: 12px;
 	text-align: center;
 	vertical-align: middle;
 	letter-spacing: 0.12em;
-	width: 12px;
-	height: 12px;
-	font-size: 24px;
+	width: 10px;
+	height: 10px;
+	font-size: 16px;
 	font-family: "dicefontd4";
 	content: "0";
 }
@@ -963,11 +963,11 @@ input[type="radio"].sheet-Reactor + span::before {
 	margin-right: 4px;
 	text-align: center;
 	vertical-align: baseline;
-	width: 18px;
+	width: 12px;
 	height: 18px;
 	font-size: 18px;
 	font-family: 'Pictos';
-	content: "Q";
+	content: "6";
 }
 
 /* Remove fill from all radios _after_ selected Reactor Capacity */
@@ -975,12 +975,12 @@ input[type="radio"]:checked.sheet-Reactor ~ input[type="radio"].sheet-Reactor + 
 	margin-right: 4px;
 	text-align: center;
 	vertical-align: baseline;
-	width: 18px;
+	width: 12px;
 	height: 18px;
 	font-size: 18px;
 	color: lightgray;
 	font-family: 'Pictos';
-	content: "Q";
+	content: "6";
 }
 /* Fake radio D6 */
 input[type="radio"].sheet-D6 + span::before,
@@ -1011,6 +1011,150 @@ input[type="checkbox"]:checked.sheet-D6 + span::before {
 
 /* Roll Button Appearance*/
 button[type=roll].sheet-rollButton::before {
+}
+
+/* ***************************************** */
+/*               SHIP SYSTEMS                */
+/* ***************************************** */
+div.sheet-systemSection {
+	display: flex;
+	flex-flow: column nowrap;
+	width: 880px;
+	padding: 5px;
+}
+
+.sheet-reactorSystem {
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/Reactor.png);
+}
+
+.sheet-shipSystem {
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ShipSystem.png);
+}
+
+.sheet-pulseArray {
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/PulseArray.png);
+}
+
+.sheet-dataStorage {
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/DataStorage.png);
+}
+
+/* Ship system text*/
+
+.sheet-systemTitle {
+	grid-area: systemTitle;
+	font-variant: small-caps;
+	font-weight: 500;
+	font-size: 16px;
+	flex-flow: nowrap;
+	padding-left: 6px;
+}
+
+.sheet-systemDetail {
+	grid-area: systemDetail;
+	font-size: 11px;
+	flex-flow: nowrap;
+	padding-left: 7px;
+}
+
+.sheet-baseDamage {
+	grid-area: baseDamage;
+	font-size: 14px;
+	flex-flow: nowrap;
+	text-align: right;
+	padding-top: 10px;
+	padding-right: 12px;
+}
+
+.sheet-systemRange {
+	grid-area: systemRange;
+	font-size: 12px;
+	flex-flow: nowrap;
+	text-align: center;
+	padding-right: 12px;
+}
+
+.sheet-systemDivide {
+	grid-area: systemDivide;
+	flex-flow: nowrap;
+}
+
+.sheet-systemListTitle {
+	grid-area: systemListTitle;
+	font-variant: small-caps;
+	font-size: 14px;
+	flex-flow: nowrap;
+	padding-left: 5px;
+}
+
+.sheet-systemListMod1 {
+	grid-area: systemListMod1;
+	font-size: 11px;
+	flex-flow: nowrap;
+	padding-left: 5px;
+}
+
+.sheet-systemListPips1 {
+	grid-area: systemListPips1;
+	flex-flow: nowrap;
+}
+
+.sheet-systemListMod2 {
+	grid-area: systemListMod2;
+	font-size: 11px;
+	flex-flow: nowrap;
+	padding-left: 5px;
+}
+
+.sheet-systemListPips2 {
+	grid-area: systemListPips2;
+	flex-flow: nowrap;
+}
+
+.sheet-systemListMod3 {
+	grid-area: systemListMod3;
+	font-size: 11px;
+	flex-flow: nowrap;
+	padding-left: 5px;
+}
+
+.sheet-systemListPips3 {
+	grid-area: systemListPips3;
+	flex-flow: nowrap;
+}
+
+.sheet-systemListMod4 {
+	grid-area: systemListMod4;
+	font-size: 11px;
+	flex-flow: nowrap;
+	padding-left: 5px;
+}
+
+.sheet-systemListPips4 {
+	grid-area: systemListPips4;
+	flex-flow: nowrap;
+}
+
+.sheet-system {
+	background-size: 184.44px 164px;
+	background-repeat: no-repeat;
+	display: grid;
+	grid-row-;
+	grid-template-columns: [left]80px, [centre]auto, [right]50px;
+	grid-template-rows: [baseTop]16px, 10px, 10px, [border]18px, [modTop]14px, 12px, 12px, 12px, 12px, auto;
+	grid-gap: 0px;
+	grid-template-areas: 'systemTitle systemTitle baseDamage' 'systemDetail systemDetail systemDetail' '. . systemRange' '. systemDivide systemDivide' 'systemListTitle systemListTitle .' 'systemListMod1 . systemListPips1' 'systemListMod2 . systemListPips2' 'systemListMod3 . systemListPips3' 'systemListMod4 . systemListPips4' '. . .';
+	height: 164px;
+	width: 184.44px;
+	padding-left: 5px;
+	padding-bottom: 5px;
+}
+
+.sheet-flex-systemRow {
+	display: flex;
+	flex-flow: nowrap;
+	width: 560px;
+	justify-content: space-evenly;
 }
 
 /* ***************************************** */
@@ -1060,7 +1204,7 @@ input[type=number].sheet-txtfield {
 
 
 .sheet-ship-block {
-	background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/FreeSpacerImg/Free%20Spacer/images/ship-section.png);
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ship-section.png);
 	background-size: 218px 330px;
 	background-repeat: no-repeat;
 	display: grid;
@@ -1263,7 +1407,7 @@ input[type=number].sheet-txtfield {
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/FreeSpacerImg/Free%20Spacer/images/ship-section-75su.png);
+		background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ship-section-75su.png);
 		background-size: 45px 45px;
 		background-repeat: no-repeat;
 		background-position: bottom;
@@ -1273,7 +1417,7 @@ input[type=number].sheet-txtfield {
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/FreeSpacerImg/Free%20Spacer/images/ship-section-grey-oct.png);
+		background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ship-section-grey-oct.png);
 		background-size: 24px 24px;
 		background-repeat: no-repeat;
 		background-position: center;
@@ -1302,7 +1446,7 @@ input[type=number].sheet-txtfield {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/FreeSpacerImg/Free%20Spacer/images/armor.png);
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/armor.png);
 	background-size: 24px 24px;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -1314,7 +1458,7 @@ input[type=number].sheet-txtfield {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/FreeSpacerImg/Free%20Spacer/images/vital.png);
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/vital.png);
 	background-size: 24px 24px;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -1327,7 +1471,7 @@ input[type=number].sheet-txtfield {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/FreeSpacerImg/Free%20Spacer/images/resiliance.png);
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/resiliance.png);
 	background-size: 24px 24px;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -1339,7 +1483,7 @@ input[type=number].sheet-txtfield {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/FreeSpacerImg/Free%20Spacer/images/sys-int.png);
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/sys-int.png);
 	background-size: 24px 24px;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -1439,7 +1583,7 @@ input[type=number].sheet-txtfield {
 }
 
 .sheet-ship-block .sheet-ship-armor input[type="checkbox"] + span.sheet-armor-x {
-	background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/FreeSpacerImg/Free%20Spacer/images/armor2.png);
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/armor2.png);
 	background-size: 24px 24px;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -1453,7 +1597,7 @@ input[type=number].sheet-txtfield {
 }
 
 .sheet-ship-block .sheet-ship-resiliance input[type="checkbox"] + span.sheet-res-x {
-	background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/FreeSpacerImg/Free%20Spacer/images/resiliance2.png);
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/resiliance2.png);
 	background-size: 24px 24px;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -1465,7 +1609,7 @@ input[type=number].sheet-txtfield {
 }
 
 .sheet-ship-block .sheet-ship-sys-integrity input[type="checkbox"] + span.sheet-integ-x {
-	background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/FreeSpacerImg/Free%20Spacer/images/sys-int2.png);
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/sys-int2.png);
 	background-size: 24px 24px;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -1477,7 +1621,7 @@ input[type=number].sheet-txtfield {
 }
 
 .sheet-ship-block .sheet-ship-vital input[type="checkbox"]:checked + span.sheet-vital-x {
-	background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/FreeSpacerImg/Free%20Spacer/images/vital2.png);
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/vital2.png);
 	background-size: 24px 24px;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -1504,7 +1648,7 @@ input[type=number].sheet-txtfield {
 	align-items: center;
 	width: 25px;
 	height: 25px;
-	background: linear-gradient( rgba(0, 255, 0, 0), rgba(0, 255, 0, 0) ), url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/FreeSpacerImg/Free%20Spacer/images/ship-section-grey-oct.png);
+	background: linear-gradient( rgba(0, 255, 0, 0), rgba(0, 255, 0, 0) ), url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ship-section-grey-oct.png);
 	background-size: 24px 24px;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -1517,25 +1661,25 @@ input[type=number].sheet-txtfield {
 
 /* Orange */
 .sheet-inv-color[value*="1"] + .sheet-ship-oct {
-	background: linear-gradient( rgba(255, 125, 0, var(--ship-transparency)), rgba(255, 126, 0, var(--ship-transparency)) ), url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/FreeSpacerImg/Free%20Spacer/images/ship-section-grey-oct.png);
+	background: linear-gradient( rgba(255, 125, 0, var(--ship-transparency)), rgba(255, 126, 0, var(--ship-transparency)) ), url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ship-section-grey-oct.png);
 	background-size: 24px 24px;
 }
 
 /* Cyan */
 .sheet-inv-color[value*="2"] + .sheet-ship-oct {
-	background: linear-gradient( rgba(0, 183, 235, var(--ship-transparency)), rgba(0, 183, 235, var(--ship-transparency)) ), url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/FreeSpacerImg/Free%20Spacer/images/ship-section-grey-oct.png);
+	background: linear-gradient( rgba(0, 183, 235, var(--ship-transparency)), rgba(0, 183, 235, var(--ship-transparency)) ), url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ship-section-grey-oct.png);
 	background-size: 24px 24px;
 }
 
 /* Yellow */
 .sheet-inv-color[value*="3"] + .sheet-ship-oct {
-	background: linear-gradient( rgba(255, 223, 0, var(--ship-transparency)), rgba(255, 223, 0, var(--ship-transparency)) ), url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/FreeSpacerImg/Free%20Spacer/images/ship-section-grey-oct.png);
+	background: linear-gradient( rgba(255, 223, 0, var(--ship-transparency)), rgba(255, 223, 0, var(--ship-transparency)) ), url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ship-section-grey-oct.png);
 	background-size: 24px 24px;
 }
 
 /* Green */
 .sheet-inv-color[value*="4"] + .sheet-ship-oct {
-	background: linear-gradient( rgba(16, 115, 85, var(--ship-transparency)), rgba(132, 222, 2, var(--ship-transparency)) ), url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/FreeSpacerImg/Free%20Spacer/images/ship-section-grey-oct.png);
+	background: linear-gradient( rgba(16, 115, 85, var(--ship-transparency)), rgba(132, 222, 2, var(--ship-transparency)) ), url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ship-section-grey-oct.png);
 	background-size: 24px 24px;
 }
 
@@ -1656,7 +1800,7 @@ input[type=number].sheet-txtfield {
 .sheet-inv-color + .sheet-ship-oct,
 .sheet-inv-color[value*="0"] + .sheet-ship-oct {
 	background: /* transparent/no color */
-	linear-gradient( rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) ), url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/FreeSpacerImg/Free%20Spacer/images/ship-section-grey-oct.png);
+	linear-gradient( rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) ), url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ship-section-grey-oct.png);
 	background-size: 24px 24px;
 }
 
@@ -1798,14 +1942,20 @@ hr {
 	margin: 10px;
 }
 
-/* ship section looks */
-
-.sheet-ship-statblock {
+.sheet-subtitlesFull {
 	font-weight: bold;
 	background-color: #ff7d00;
 	width: 900px;
 	padding-left: 10px;
 	margin-bottom: 5px;
+}
+
+.sheet-subtitlesWide {
+	font-weight: bold;
+	background-color: #ff7d00;
+	width: 550px;
+	padding-left: 10px;
+	margin-bottom: 10px;
 }
 
 /* Hide old ship section */
