Remove the transparency Variable
Removed the transparency Variable and hardcoded 0.5 transparency

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -1,10 +1,4 @@
-﻿/* Varaibless */
-* {
-	--ship-transparency: 0.5;
-}
-
-
-/* CSS Reset */
+﻿/* CSS Reset */
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -1541,7 +1535,7 @@ input[type=number].sheet-txtfield {
 		}
 
 	.sheet-ship-block .sheet-ship-oct input[type="checkbox"]:checked + span::before {
-		opacity: var(--ship-transparency);
+		opacity: 0.5;
 	}
 
 .sheet-ship-block .sheet-ship-oct.sheet-ship-bottom input[type="checkbox"] + span::before {
@@ -1661,25 +1655,25 @@ input[type=number].sheet-txtfield {
 
 /* Orange */
 .sheet-inv-color[value*="1"] + .sheet-ship-oct {
-	background: linear-gradient( rgba(255, 125, 0, var(--ship-transparency)), rgba(255, 126, 0, var(--ship-transparency)) ), url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ship-section-grey-oct.png);
+	background: linear-gradient( rgba(255, 125, 0, 0.5), rgba(255, 126, 0, 0.5) ), url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ship-section-grey-oct.png);
 	background-size: 24px 24px;
 }
 
 /* Cyan */
 .sheet-inv-color[value*="2"] + .sheet-ship-oct {
-	background: linear-gradient( rgba(0, 183, 235, var(--ship-transparency)), rgba(0, 183, 235, var(--ship-transparency)) ), url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ship-section-grey-oct.png);
+	background: linear-gradient( rgba(0, 183, 235, 0.5), rgba(0, 183, 235, 0.5) ), url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ship-section-grey-oct.png);
 	background-size: 24px 24px;
 }
 
 /* Yellow */
 .sheet-inv-color[value*="3"] + .sheet-ship-oct {
-	background: linear-gradient( rgba(255, 223, 0, var(--ship-transparency)), rgba(255, 223, 0, var(--ship-transparency)) ), url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ship-section-grey-oct.png);
+	background: linear-gradient( rgba(255, 223, 0, 0.5), rgba(255, 223, 0, 0.5) ), url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ship-section-grey-oct.png);
 	background-size: 24px 24px;
 }
 
 /* Green */
 .sheet-inv-color[value*="4"] + .sheet-ship-oct {
-	background: linear-gradient( rgba(16, 115, 85, var(--ship-transparency)), rgba(132, 222, 2, var(--ship-transparency)) ), url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ship-section-grey-oct.png);
+	background: linear-gradient( rgba(16, 115, 85, 0.5), rgba(132, 222, 2, 0.5) ), url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ship-section-grey-oct.png);
 	background-size: 24px 24px;
 }
 
