Ship System Widget Complete
Finished up the ship system widget.

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -579,7 +579,7 @@ textarea {
 	}
 
 	textarea.sheet-data {
-		height: 6em;
+		height: 100px;
 	}
 
 	textarea.sheet-letter {
@@ -838,7 +838,7 @@ input[type="checkbox"]:checked.sheet-patch + span::before {
 
 /* Fake radio as D10s*/
 input[type="radio"].sheet-D10 + span::before {
-	margin-right: 6px;
+	margin-right: 4px;
 	line-height: 12px;
 	text-align: center;
 	vertical-align: middle;
@@ -851,7 +851,7 @@ input[type="radio"].sheet-D10 + span::before {
 
 /* Remove fill from all radios _after_ selected D10 */
 input[type="radio"]:checked.sheet-D10 ~ input[type="radio"].sheet-D10 + span::before {
-	margin-right: 6px;
+	margin-right: 4px;
 	line-height: 12px;
 	text-align: center;
 	vertical-align: middle;
@@ -893,7 +893,7 @@ input[type="checkbox"]:checked.sheet-Overcharge + span::before {
 
 /* Fake radio as Uparrows*/
 input[type="radio"].sheet-Boost + span::before {
-	margin-right: 4px;
+	margin-right: 3px;
 	line-height: 12px;
 	text-align: center;
 	vertical-align: middle;
@@ -907,7 +907,7 @@ input[type="radio"].sheet-Boost + span::before {
 
 /* Remove fill from all radios _after_ selected Uparrows */
 input[type="radio"]:checked.sheet-Boost ~ input[type="radio"].sheet-Boost + span::before {
-	margin-right: 4px;
+	margin-right: 3px;
 	line-height: 12px;
 	text-align: center;
 	vertical-align: middle;
@@ -955,26 +955,20 @@ select.sheet-FittingAdv {
 /* Fake radio as Reactor Capacity*/
 input[type="radio"].sheet-Reactor + span::before {
 	margin-right: 4px;
-	text-align: center;
+	text-align: right;
 	vertical-align: baseline;
-	width: 12px;
-	height: 18px;
-	font-size: 18px;
-	font-family: 'Pictos';
-	content: "6";
+	font-size: 13px;
+	content: "█";
 }
 
 /* Remove fill from all radios _after_ selected Reactor Capacity */
 input[type="radio"]:checked.sheet-Reactor ~ input[type="radio"].sheet-Reactor + span::before {
 	margin-right: 4px;
-	text-align: center;
+	text-align: right;
 	vertical-align: baseline;
-	width: 12px;
-	height: 18px;
-	font-size: 18px;
+	font-size: 13px;
 	color: lightgray;
-	font-family: 'Pictos';
-	content: "6";
+	content: "█";
 }
 /* Fake radio D6 */
 input[type="radio"].sheet-D6 + span::before,
@@ -1011,8 +1005,6 @@ button[type=roll].sheet-rollButton::before {
 /*               SHIP SYSTEMS                */
 /* ***************************************** */
 div.sheet-systemSection {
-	display: flex;
-	flex-flow: column nowrap;
 	width: 880px;
 	padding: 5px;
 }
@@ -1039,16 +1031,17 @@ div.sheet-systemSection {
 	grid-area: systemTitle;
 	font-variant: small-caps;
 	font-weight: 500;
-	font-size: 16px;
 	flex-flow: nowrap;
-	padding-left: 6px;
+	font-size: 14px;
+	padding-left: 10px;
+	padding-top: 2px;
 }
 
 .sheet-systemDetail {
 	grid-area: systemDetail;
 	font-size: 11px;
-	flex-flow: nowrap;
-	padding-left: 7px;
+	padding-left: 13px;
+	padding-top:2px;
 }
 
 .sheet-baseDamage {
@@ -1056,92 +1049,140 @@ div.sheet-systemSection {
 	font-size: 14px;
 	flex-flow: nowrap;
 	text-align: right;
-	padding-top: 10px;
-	padding-right: 12px;
+	padding-top: 12px;
+	padding-right: 10px;
 }
 
 .sheet-systemRange {
 	grid-area: systemRange;
-	font-size: 12px;
-	flex-flow: nowrap;
-	text-align: center;
+	font-size: 11px;
+	text-align: right;
 	padding-right: 12px;
+	padding-top: 2px;
 }
 
 .sheet-systemDivide {
 	grid-area: systemDivide;
-	flex-flow: nowrap;
+	text-align: end;
 }
 
 .sheet-systemListTitle {
 	grid-area: systemListTitle;
 	font-variant: small-caps;
 	font-size: 14px;
-	flex-flow: nowrap;
-	padding-left: 5px;
+	padding-left: 4px;
+}
+
+.sheet-systemChargeTitle {
+	grid-area: systemChargeTitle;
+	font-variant: small-caps;
+	font-size: 14px;
+	padding-left: 20px;
+	padding-top: 10px;
+}
+
+input[type="number"].sheet-currentCharge {
+	height: 70px;
+	width: 80px;
+	font-size: 18px;
+}
+
+.sheet-systemChargeBox {
+	grid-column-start: 1;
+	grid-row-start: 6;
+	grid-column-end: 3;
+	grid-row-end: 10;
+	padding-left: 8px;
+	padding-bottom: 8px;
+}
+
+.sheet-systemOverchargeTitle {
+	grid-area: systemListPips1;
+	font-variant: small-caps;
+	font-size: 11px;
+	text-align: end;
+	padding-right: 4px;
+}
+
+.sheet-systemOverchargeSymbol {
+	grid-area: systemListPips3;
+	text-align: center;
+}
+
+.sheet-systemDataBox {
+	grid-column-start: 1;
+	grid-row-start: 4;
+	grid-column-end: 4;
+	grid-row-end: 10;
+	padding-left: 8px;
+	padding-bottom: 8px;
+	padding-right: 8px;
+}
+
+.sheet-systemAIName {
+	grid-area: systemDetail;
+	font-size: 12px;
+	padding-left: 13px;
 }
 
 .sheet-systemListMod1 {
 	grid-area: systemListMod1;
 	font-size: 11px;
-	flex-flow: nowrap;
-	padding-left: 5px;
+	padding-left: 4px;
 }
 
 .sheet-systemListPips1 {
 	grid-area: systemListPips1;
-	flex-flow: nowrap;
+	text-align: end;
+	padding-right: 4px;
 }
 
 .sheet-systemListMod2 {
 	grid-area: systemListMod2;
 	font-size: 11px;
-	flex-flow: nowrap;
-	padding-left: 5px;
+	padding-left: 4px;
 }
 
 .sheet-systemListPips2 {
 	grid-area: systemListPips2;
-	flex-flow: nowrap;
+	text-align: end;
+	padding-right: 4px;
 }
 
 .sheet-systemListMod3 {
 	grid-area: systemListMod3;
 	font-size: 11px;
-	flex-flow: nowrap;
-	padding-left: 5px;
+	padding-left: 4px;
 }
 
 .sheet-systemListPips3 {
 	grid-area: systemListPips3;
-	flex-flow: nowrap;
+	text-align: end;
+	padding-right: 4px;
 }
 
 .sheet-systemListMod4 {
 	grid-area: systemListMod4;
 	font-size: 11px;
-	flex-flow: nowrap;
-	padding-left: 5px;
+	padding-left: 4px;
 }
 
 .sheet-systemListPips4 {
 	grid-area: systemListPips4;
-	flex-flow: nowrap;
+	text-align: end;
+	padding-right: 4px;
 }
 
 .sheet-system {
 	background-size: 184.44px 164px;
 	background-repeat: no-repeat;
 	display: grid;
-	grid-row-;
-	grid-template-columns: [left]80px, [centre]auto, [right]50px;
-	grid-template-rows: [baseTop]16px, 10px, 10px, [border]18px, [modTop]14px, 12px, 12px, 12px, 12px, auto;
+	grid-template-columns: minmax(90px,150px), minmax(0px,50px), minmax(30px,80px);
+	grid-template-rows: repeat(10,minmax(5px,20px));
 	grid-gap: 0px;
-	grid-template-areas: 'systemTitle systemTitle baseDamage' 'systemDetail systemDetail systemDetail' '. . systemRange' '. systemDivide systemDivide' 'systemListTitle systemListTitle .' 'systemListMod1 . systemListPips1' 'systemListMod2 . systemListPips2' 'systemListMod3 . systemListPips3' 'systemListMod4 . systemListPips4' '. . .';
+	grid-template-areas: 'systemTitle systemTitle baseDamage' 'systemDetail systemDetail systemDetail' '. . systemRange' 'systemChargeTitle systemDivide systemDivide' 'systemListTitle systemListTitle .' 'systemListMod1 . systemListPips1' 'systemListMod2 . systemListPips2' 'systemListMod3 . systemListPips3' 'systemListMod4 . systemListPips4' '. . .';
 	height: 164px;
 	width: 184.44px;
-	padding-left: 5px;
-	padding-bottom: 5px;
 }
 
 .sheet-flex-systemRow {
