Module Widget 1st draft
Set up the first half of the module widget

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -1004,7 +1004,7 @@ button[type=roll].sheet-rollButton::before {
 /* ***************************************** */
 /*               SHIP SYSTEMS                */
 /* ***************************************** */
-div.sheet-systemSection {
+div.sheet-systemWidget {
 	width: 880px;
 	padding: 5px;
 }
@@ -1025,6 +1025,25 @@ div.sheet-systemSection {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/DataStorage.png);
 }
 
+.sheet-system {
+	background-size: 184.44px 164px;
+	background-repeat: no-repeat;
+	display: grid;
+	grid-template-columns: minmax(90px,150px), minmax(0px,50px), minmax(30px,80px);
+	grid-template-rows: repeat(10,minmax(5px,20px));
+	grid-gap: 0px;
+	grid-template-areas: 'systemTitle systemTitle systemDamage' 'systemDetail systemDetail systemDetail' '. . systemRange' 'systemChargeTitle systemDivide systemDivide' 'systemListTitle systemListTitle .' 'systemListMod1 . systemListPips1' 'systemListMod2 . systemListPips2' 'systemListMod3 . systemListPips3' 'systemListMod4 . systemListPips4' '. . .';
+	height: 164px;
+	width: 184.44px;
+}
+
+.sheet-flex-systemRow {
+	display: flex;
+	flex-flow: nowrap;
+	width: 560px;
+	justify-content: space-evenly;
+}
+
 /* Ship system text*/
 
 .sheet-systemTitle {
@@ -1041,11 +1060,11 @@ div.sheet-systemSection {
 	grid-area: systemDetail;
 	font-size: 11px;
 	padding-left: 13px;
-	padding-top:2px;
+	padding-top: 2px;
 }
 
-.sheet-baseDamage {
-	grid-area: baseDamage;
+.sheet-systemDamage {
+	grid-area: systemDamage;
 	font-size: 14px;
 	flex-flow: nowrap;
 	text-align: right;
@@ -1123,6 +1142,7 @@ input[type="number"].sheet-currentCharge {
 	grid-area: systemDetail;
 	font-size: 12px;
 	padding-left: 13px;
+	padding-top: 2px;
 }
 
 .sheet-systemListMod1 {
@@ -1173,23 +1193,312 @@ input[type="number"].sheet-currentCharge {
 	padding-right: 4px;
 }
 
-.sheet-system {
-	background-size: 184.44px 164px;
-	background-repeat: no-repeat;
-	display: grid;
-	grid-template-columns: minmax(90px,150px), minmax(0px,50px), minmax(30px,80px);
-	grid-template-rows: repeat(10,minmax(5px,20px));
-	grid-gap: 0px;
-	grid-template-areas: 'systemTitle systemTitle baseDamage' 'systemDetail systemDetail systemDetail' '. . systemRange' 'systemChargeTitle systemDivide systemDivide' 'systemListTitle systemListTitle .' 'systemListMod1 . systemListPips1' 'systemListMod2 . systemListPips2' 'systemListMod3 . systemListPips3' 'systemListMod4 . systemListPips4' '. . .';
-	height: 164px;
-	width: 184.44px;
+/* ***************************************** */
+/*			  SHIP MODULES					 */
+/* ***************************************** */
+
+div.sheet-moduleWidget {
+	width: 880px;
+	padding: 5px;
 }
 
-.sheet-flex-systemRow {
+.sheet-basicModule {
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/Module.png);
+}
+
+.sheet-weaponModule {
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/WeaponModule.png);
+}
+
+.sheet-module {
+	background-size: 137.33px 180px;
+	background-repeat: no-repeat;
+	display: grid;
+	grid-template-columns: minmax(2px,12px), minmax(20px,50px), minmax(20px,50px), minmax(20px,50px);
+	grid-template-rows: repeat(10,minmax(5px,20px));
+	grid-gap: 0px;
+	height: 180px;
+	width: 137.33px;
+}
+
+.sheet-flex-moduleRow {
 	display: flex;
 	flex-flow: nowrap;
 	width: 560px;
 	justify-content: space-evenly;
+}
+
+/* Ship system text*/
+
+.sheet-moduleTitle {
+	font-variant: small-caps;
+	font-weight: 500;
+	flex-flow: nowrap;
+	font-size: 14px;
+	grid-column-start: 1;
+	grid-row-start: 1;
+	grid-column-end: 5;
+	grid-row-end: 2;
+	padding-left: 10px;
+	padding-top: 2px;
+}
+
+.sheet-moduleDetail {
+	font-size: 11px;
+	grid-column-start: 2;
+	grid-row-start: 2;
+	grid-column-end: 5;
+	grid-row-end: 3;
+	padding-left: 13px;
+	padding-top: 2px;
+}
+
+.sheet-moduleDamage {
+	font-size: 14px;
+	flex-flow: nowrap;
+	text-align: right;
+	grid-column-start: 4;
+	grid-row-start: 1;
+	grid-column-end: 5;
+	grid-row-end: 2;
+	padding-top: 12px;
+	padding-right: 10px;
+}
+
+.sheet-moduleRange {
+	font-size: 11px;
+	text-align: right;
+	grid-column-start: 3;
+	grid-row-start: 3;
+	grid-column-end: 5;
+	grid-row-end: 4;
+	padding-right: 12px;
+	padding-top: 2px;
+}
+
+.sheet-moduleListTitle {
+	font-variant: small-caps;
+	font-size: 14px;
+	grid-column-start: 1;
+	grid-row-start: 5;
+	grid-column-end: 5;
+	grid-row-end: 6;
+	padding-left: 4px;
+}
+
+.sheet-moduleListLabCheckbox1 {
+	grid-column-start: 1;
+	grid-row-start: 4;
+	grid-column-end: 2;
+	grid-row-end: 5;
+	padding-left: 4px;
+}
+
+.sheet-moduleListLabTitle1 {
+	font-variant: small-caps;
+	font-size: 14px;
+	grid-column-start: 1;
+	grid-row-start: 4;
+	grid-column-end: 2;
+	grid-row-end: 5;
+	padding-left: 4px;
+}
+
+.sheet-moduleListLabCheckbox2 {
+	grid-column-start: 1;
+	grid-row-start: 6;
+	grid-column-end: 2;
+	grid-row-end: 7;
+	padding-left: 4px;
+}
+
+.sheet-moduleListLabTitle2 {
+	font-variant: small-caps;
+	font-size: 14px;
+	grid-column-start: 2;
+	grid-row-start: 6;
+	grid-column-end: 3;
+	grid-row-end: 7;
+	padding-left: 4px;
+}
+
+.sheet-moduleListLabCheckbox3 {
+	grid-column-start: 1;
+	grid-row-start: 8;
+	grid-column-end: 2;
+	grid-row-end: 9;
+	padding-left: 4px;
+}
+
+.sheet-moduleListLabTitle3 {
+	font-variant: small-caps;
+	font-size: 14px;
+	grid-column-start: 2;
+	grid-row-start: 8;
+	grid-column-end: 3;
+	grid-row-end: 9;
+	padding-left: 4px;
+}
+
+.sheet-moduleListCost1 {
+	font-size: 14px;
+	grid-column-start: 1;
+	grid-row-start: 5;
+	grid-column-end: 2;
+	grid-row-end: 6;
+	padding-left: 4px;
+}
+
+.sheet-moduleListFitting1 {
+	font-size: 11px;
+	grid-column-start: 2;
+	grid-row-start: 5;
+	grid-column-end: 3;
+	grid-row-end: 6;
+}
+
+.sheet-moduleListPips1 {
+	grid-area: systemListPips1;
+	text-align: end;
+	grid-column-start: 4;
+	grid-row-start: 5;
+	grid-column-end: 5;
+	grid-row-end: 6;
+	padding-right: 4px;
+}
+
+.sheet-moduleListCost2 {
+	font-size: 14px;
+	grid-column-start: 1;
+	grid-row-start: 6;
+	grid-column-end: 2;
+	grid-row-end: 7;
+	padding-left: 4px;
+}
+
+.sheet-moduleListFitting2 {
+	font-size: 11px;
+	grid-column-start: 2;
+	grid-row-start: 6;
+	grid-column-end: 3;
+	grid-row-end: 7;
+}
+
+.sheet-moduleListPips2 {
+	grid-area: systemListPips1;
+	text-align: end;
+	grid-column-start: 4;
+	grid-row-start: 6;
+	grid-column-end: 5;
+	grid-row-end: 7;
+	padding-right: 4px;
+}
+
+.sheet-moduleListCost3 {
+	font-size: 14px;
+	grid-column-start: 1;
+	grid-row-start: 7;
+	grid-column-end: 2;
+	grid-row-end: 8;
+	padding-left: 4px;
+}
+
+.sheet-moduleListFitting3 {
+	font-size: 11px;
+	grid-column-start: 2;
+	grid-row-start: 7;
+	grid-column-end: 3;
+	grid-row-end: 8;
+}
+
+.sheet-moduleListPips3 {
+	grid-area: systemListPips1;
+	text-align: end;
+	grid-column-start: 4;
+	grid-row-start: 7;
+	grid-column-end: 5;
+	grid-row-end: 8;
+	padding-right: 4px;
+}
+
+.sheet-moduleListCost4 {
+	font-size: 14px;
+	grid-column-start: 1;
+	grid-row-start: 8;
+	grid-column-end: 2;
+	grid-row-end: 9;
+	padding-left: 4px;
+}
+
+.sheet-moduleListFitting4 {
+	font-size: 11px;
+	grid-column-start: 2;
+	grid-row-start: 8;
+	grid-column-end: 3;
+	grid-row-end: 9;
+}
+
+.sheet-moduleListPips4 {
+	grid-area: systemListPips1;
+	text-align: end;
+	grid-column-start: 4;
+	grid-row-start: 8;
+	grid-column-end: 5;
+	grid-row-end: 9;
+	padding-right: 4px;
+}
+.sheet-moduleListCost5 {
+	font-size: 14px;
+	grid-column-start: 1;
+	grid-row-start: 9;
+	grid-column-end: 2;
+	grid-row-end: 10;
+	padding-left: 4px;
+}
+
+.sheet-moduleListFitting5 {
+	font-size: 11px;
+	grid-column-start: 2;
+	grid-row-start: 9;
+	grid-column-end: 3;
+	grid-row-end: 10;
+}
+
+.sheet-moduleListPips5 {
+	grid-area: systemListPips1;
+	text-align: end;
+	grid-column-start: 4;
+	grid-row-start: 9;
+	grid-column-end: 5;
+	grid-row-end: 10;
+	padding-right: 4px;
+}
+
+.sheet-moduleListCost6 {
+	font-size: 14px;
+	grid-column-start: 1;
+	grid-row-start: 10;
+	grid-column-end: 2;
+	grid-row-end: 11;
+	padding-left: 4px;
+}
+
+.sheet-moduleListFitting6 {
+	font-size: 11px;
+	grid-column-start: 2;
+	grid-row-start: 10;
+	grid-column-end: 3;
+	grid-row-end: 11;
+}
+
+.sheet-moduleListPips6 {
+	grid-area: systemListPips1;
+	text-align: end;
+	grid-column-start: 4;
+	grid-row-start: 10;
+	grid-column-end: 5;
+	grid-row-end: 11;
+	padding-right: 4px;
 }
 
 /* ***************************************** */
